[package]
name = "tan-shell"
description = "A shell powered by Tan"
version = "0.13.0"
license = "Apache-2.0"
repository = "https://github.com/tanlang-org/tan-shell"
keywords = ["shell", "tan", "language", "cli"]
authors = ["George Moschovitis <gmosx@reizu.org>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = "4"
rustyline = "14.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tan = { path = "../tan", version = "0.13" }

[[bin]]
# name = "tansh"
name = "tan-shell"
path = "src/main.rs"
